--- a/templates/macros.html
+++ b/templates/macros.html
@@ -17,14 +17,15 @@
     <p>&copy; {{ config.extra.username }}</p>
     <p>Ported to Zola with <span class="love">❤</span> by <a href="https://github.com/svavs">Silvano Sallese</a> (original by <a href="https://github.com/nrandecker">Nathan Randecker</a>)</p>
 </footer>
-<script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script type="module" src="{{ config.base_url ~ "/js/bacter_load.js" }}"></script>
 <script src="{{ config.base_url ~ "/js/sweet-scroll.min.js" }}"></script>
 <script src="{{ config.base_url ~ "/js/main.js" }}"></script>
 {% endmacro footer %}
 
 {% macro header() %}
 <div id="particles-js">
-  <div class="header">
+    <canvas id="bacter_canvas"></canvas>
+    <div class="header">
       <h1>
         <span class="site-title">{{ config.extra.username }}</span>
         <span class="site-description">{{ config.extra.user_title }}</span>
