Added plenty of content in the about section

--- a/templates/content.html
+++ b/templates/content.html
@@ -5,28 +5,22 @@
 </div>
   <div class="user">
     <div class="tech">
-      <h2>Design</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
-    </div>
-    <div class="tech">
       <h2>Code</h2>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <i class="devicon-cplusplus-plain-wordmark colored"></i>
+      <i class="devicon-rust-plain"></i>
+      <p>System programmer with <b>8 years</b> of experience in C++ for industrial application (from medical to aerospace), embedded systems and <b>Radar</b> processing.</br>  Learning and using <b>Rust</b> as the next logical step.</p>
+    </div>
+    <div class="tech"> 
+      <h2>3D Sculpting</h2>
+      <i class="devicon-blender-original colored"></i>
+      <i class="devicon"><img src="/img/sketchup_logo.svg"></i>
+      <p>Once a traditional sculptor, now 3D modelling from the concept art to the <b>3D-printed miniatures</b>, aiming at the higher standards of the miniatures industry in my <b>online store</b>.</br> Toying with <b>procedural generation</b> and meshes manipulation.</p>
     </div>
     <div class="tech">
-      <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <h2>Game Design</h2>
+      <i class="devicon"><img src="/img/tlf_logo.svg"></i>
+      <i class="devicon-photoshop-line"></i>
+      <p>Creator of boardgames and wargames.</br>  Author of <b>Full Spectrum Dominance</b>, Round of Fire, and countless unpublished prototypes.</br> Following <b>every step</b> of the game development, from the first drafts to the graphics up to the community management.</p>
     </div>
 </div>
 {% endmacro about %}
