Successfully merged simple-dev-blog features in particle

--- a/templates/content.html
+++ b/templates/content.html
@@ -8,19 +8,19 @@
       <h2>Code</h2>
       <i class="devicon-cplusplus-plain-wordmark colored"></i>
       <i class="devicon-rust-plain"></i>
-      <p>System programmer with <b>8 years</b> of experience in C++ for industrial application (from medical to aerospace), embedded systems and <b>Radar</b> processing.</br>  Learning and using <b>Rust</b> as the next logical step.</p>
+      <p>System programmer with <b>8 years</b> of experience in C++ across various industrial applications, ranging from medical to aerospace, from <b>Radar</b> data processing to controls for embedded devices.</br> Learning and experimenting with <b>Rust</b>.</p>
     </div>
     <div class="tech"> 
       <h2>3D Sculpting</h2>
       <i class="devicon-blender-original colored"></i>
-      <i class="devicon"><img src="/img/sketchup_logo.svg"></i>
-      <p>Once a traditional sculptor, now 3D modelling from the concept art to the <b>3D-printed miniatures</b>, aiming at the higher standards of the miniatures industry in my <b>online store</b>.</br> Toying with <b>procedural generation</b> and meshes manipulation.</p>
+      <i class="devicon"><img src={{ config.base_url ~ "/img/sketchup_logo.svg"}}></i>
+      <p>Once a traditional sculptor, now 3D modelling from concept art to <b>3D-printed miniatures</b>. Striving to maintain the highest standards in the miniatures industry and running an <b>online store</b>.</br> Toying with <b>procedural generation</b> and mesh manipulation.</p>
     </div>
     <div class="tech">
       <h2>Game Design</h2>
-      <i class="devicon"><img src="/img/tlf_logo.svg"></i>
+      <i class="devicon"><img src={{ config.base_url ~ "/img/tlf_logo.svg"}}></i>
       <i class="devicon-photoshop-line"></i>
-      <p>Creator of boardgames and wargames.</br>  Author of <b>Full Spectrum Dominance</b>, Round of Fire, and countless unpublished prototypes.</br> Following <b>every step</b> of the game development, from the first drafts to the graphics up to the community management.</p>
+      <p>Creator of boardgames and wargames.</br>  Author of <b>Full Spectrum Dominance</b>, Round of Fire, and countless unpublished prototypes.</br> Involved in <b>every step</b> of game development, from initial drafts to graphics, all the way through to community management.</p>
     </div>
 </div>
 {% endmacro about %}
