--- a/templates/page.html
+++ b/templates/page.html
@@ -1,22 +1,5 @@
-{% import "macros.html" as macros %}
-{% import "content.html" as content %}
+{% extends "base.html" %}
 
-
-
-<!DOCTYPE html>
-
-{{ macros::small_head() }}
-
-  <body>
-
-      {{ macros::small_header() }}
-
-      {% block content %}
-        {{ page.content }}
-      {% endblock content %}  
-
-
-      {{ macros::footer() }}
-      {{ macros::google_analytics() }}
-
-  </body>
+{% block content %}
+  {{ page.content | safe }}
+{% endblock content %}
