--- a/templates/content.html
+++ b/templates/content.html
@@ -1,8 +1,5 @@
 {% macro about() %}
- <div class="user-details">
-  <h1> My Expertise </h1>
-  <p> {{ config.extra.user_description }} </p>
-</div>
+
   <div class="user">
     <div class="tech">
       <h2>Code</h2>
@@ -27,7 +24,7 @@
 
 {% macro projects() %}
 <div class="user-details">
-  <h1> Featured Projects </h1>
+  <h3><p> {{ config.extra.user_description }} </p></h3>
 </div>
 <div class="user-projects">
   <div class="images-right">
