--- a/templates/macros.html
+++ b/templates/macros.html
@@ -62,7 +62,7 @@
         <a class="link" href="blog">Blog</a>
       </div>
   </div>
-  <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
+  <a class="down" href="#projects" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
 </div>
 {% endmacro header %}
 
