--- a/templates/content.html
+++ b/templates/content.html
@@ -28,38 +28,28 @@
 </div>
 
 <!-- lazy-tree -->
-<div class="user-projects">
-  <div class="images-left">
-    <img alt="mountains" src="{{ config.base_url ~ "/img/oaks.jpg" }}" />
+<div class="projects-grid">
+  <div class="users-projects">
+    <a href="https://github.com/thelazyone/lazy-tree"><img class="images-center" alt="Lazy Tree" src="{{ config.base_url ~ "/img/oaks.jpg" }}" /></a>
+    <div class="contents-center">
+      <h3> Procedural Trees Generation </h3>
+      <p>A Blender script to generate realistic trees with a bottom-up approach. Currently in python, the next version will be re-written in Rust with new more accurate simulation logics.</p>
+    </div>
   </div>
-  <div class="contents-right">
-    <h3> Procedural Trees Generation </h3>
-    <p>A Blender script to generate realistic trees with a bottom-up approach. Currently in python, the next version will be re-written in Rust with new more accurate simulation logics.</p>
-    <a class="project-link" href="https://github.com/thelazyone/lazy-tree">Github Repo</a>
-  </div>
-</div>
 
-<!-- bacter -->
-<div class="user-projects">
-  <div class="images-right">
-    <img alt="mountains" src="{{ config.base_url ~ "/img/bacter.jpg" }}" />
+  <div class="users-projects">
+    <a href="https://github.com/thelazyone/Bacter/"><img class="images-center" alt="Bacter" src="{{ config.base_url ~ "/img/bacter.jpg" }}" /></a>
+    <div class="contents-center">
+      <h3> Bacter: an Evolution Simulator </h3>
+      <p>A Petri dish where simple cellular automata compete for reproduction. Not only the fittest characteristic are selected, but over time those maxima move in the parameters space!</p>
+    </div>
   </div>
-  <div class="contents">
-    <h3> Bacter: an Evolution Simulator </h3>
-    <p>A Petri dish where simple cellular automata compete for reproduction. Not only the fittest characteristic are selected, but over time those maxima move in the parameters space!</p>
-    <a class="project-link" href="https://github.com/thelazyone/Bacter/">Github Repo</a>
-  </div>
-</div>
-
-<!-- fsd -->
-<div class="user-projects">
-  <div class="images-left">
-    <img alt="mountains" src="{{ config.base_url ~ "/img/fsd.jpg" }}" />
-  </div>
-  <div class="contents-right">
-    <h3> Full Spectrum Dominance </h3>
-    <p>A small-scale miniature wargame, with a fresh and modern ruleset. The models and the terrain are all original creations, that players can purchase and print at home, making the game entirely print-and-play.</p>
-    <a class="project-link" href="https://fsd-wargame.com/">Website</a>
+  <div class="users-projects">
+    <a href="https://fsd-wargame.com/"><img class="images-center" alt="Full Spectrum Dominance" src="{{ config.base_url ~ "/img/fsd.jpg" }}" /></a>
+    <div class="contents-center">
+      <h3> Full Spectrum Dominance </h3>
+      <p>A small-scale miniature wargame, with a fresh and modern ruleset. The models and the terrain are all original creations, that players can purchase and print at home, making the game entirely print-and-play.</p>
+    </div>
   </div>
 </div>
 {% endmacro projects %}
